# confusednn-slicer

./: .gitignore  README.md  gcode.py  pyproject.toml  train.py
data/: slice.sh
