[tool.poetry]
name = "slicer"
version = "0.1.0"
description = ""
authors = ["Tristan Rice <rice@fn.lc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
numpy-stl = "^2.11.2"
torch = "^1.6.0"
torchvision = "^0.7.0"
pygcode = "^0.2.1"
trimesh = "^3.8.4"
scipy = "^1.5.2"
shapely = "^1.7.1"
networkx = "^2.5"
matplotlib = "^3.3.1"
rtree = "^0.9.4"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
